--- a/index.html
+++ b/index.html
@@ -740,18 +740,18 @@
     <div
       class="container-fluid bg-primary text-white mt-5 py-5 px-sm-3 px-md-5"
     >
-      <div class="container text-center py-5">
+       <div class="container text-center py-5">
         <div class="d-flex justify-content-center mb-4">
-          <a class="btn btn-light btn-social mr-2" href="https://x.com/"
+          <a class="btn btn-light btn-social mr-2" href="https://x.com/GnagnikoSe19763e"
             ><li class="fab fa-twitter"></li
           ></a>
-          <a class="btn btn-light btn-social mr-2" href="https://www.facebook.com/"
+          <a class="btn btn-light btn-social mr-2" href="https://www.facebook.com/profile.php?id=100072759472735"
             ><li class="fab fa-facebook-f"></li
           ></a>
-          <a class="btn btn-light btn-social mr-2" href="https://www.linkedin.com/"
+          <a class="btn btn-light btn-social mr-2" href="https://www.linkedin.com/in/sergio-gnagniko-b80b30314/?lipi=urn%3Ali%3Apage%3Ad_flagship3_feed%3B2598fXP2TeeWusjL5y%2BPqg%3D%3D"
             ><li class="fab fa-linkedin-in"></li
           ></a>
-          <a class="btn btn-light btn-social" href="https://www.instagram.com/"
+          <a class="btn btn-light btn-social" href="https://www.instagram.com/yaovisergio/"
             ><li class="fab fa-instagram"></li
           ></a>
         </div>
